<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/taotaikhoan"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/titleSize" />

    <EditText
        android:id="@+id/edHoVaTen"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_ed_login"
        android:hint="@string/hovaten"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edSoDienThoai"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_ed_login"
        android:hint="@string/sodienthoai"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_ed_login"
        android:hint="@string/matkhau"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/dangky"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16dp" />
</LinearLayout>