<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ForgotPasswordActivity">
    <ImageView
        android:id="@+id/ivBack"
        android:layout_margin="20dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:textSize="@dimen/titleSize"
        android:textColor="@color/colorDark"
        android:text="@string/quenmatkhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="number"
        android:id="@+id/edSoDienThoai"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_ed_login"
        android:hint="@string/nhapsodienthoai"
        android:padding="10dp" />
    <TextView
        android:textSize="@dimen/normal"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/please"
        android:textColor="@color/colorDark"
        android:layout_width="240dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnGuiMaOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/gui"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/normal"></Button>
</LinearLayout>